Update website to HT26 Committee and President's Introduction with some placeholders left for some Committee

--- a/committee.html
+++ b/committee.html
@@ -87,7 +87,7 @@
     <!-- home -->
     <!-- Committee Members Section -->
     <section class="committee-members container my-5 text-center">
-        <span class="badge badge-mt-term-2025">Michaelmas Term 2025</span>
+        <span class="badge badge-ht-term-2026">Hilary Term 2026</span>
         <h1 class="text-center mb-5">The Executive</h1>
         <p class="text-center mb-5">The Executive (or Junior Officers) are in charge of the Association's day to day governance - including organising and hosting events.</p>
 
@@ -95,11 +95,11 @@
             <!-- President Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/president.jpg" class="card-img-top" alt="The President" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/president.jpeg" class="card-img-top" alt="The President" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">Junior President</h2>
-                        <h3 class="card-fullname">Theo Cunningham</h3>
-                        <p class="card-college"><i>St. John's College</i></p>
+                        <h3 class="card-fullname">Harry Morgan</h3>
+                        <p class="card-college"><i>Pembroke College</i></p>
                         <p class="card-text">Responsible for overall management of the Association, promoting liberal values through lively social events, engaging speakers and collaborations with other societies.</p>
                         <a href="mailto:president@oxuniliberals.com" class="btn-email">Email: The Junior President</a>
                     </div>
@@ -109,11 +109,11 @@
             <!-- President-Elect Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/president-elect.jpeg" class="card-img-top" alt="The President-Elect" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/president-elect.png" class="card-img-top" alt="The President-Elect" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">Junior President-Elect</h2>
-                        <h3 class="card-fullname">Harry Morgan</h3>
-                        <p class="card-college"><i>Pembroke College</i></p>
+                        <h3 class="card-fullname">Thomas Dorey</h3>
+                        <p class="card-college"><i>Oxford Brookes University</i></p>
                         <p class="card-text">Responsible for preparing for their term as Junior President, and functioning as the Association's Vice President. </p>
                     </div>
                 </div>
@@ -135,11 +135,11 @@
             <!-- Secretary Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/secretary.jpg" class="card-img-top" alt="The Secretary" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/secretary.jpeg" class="card-img-top" alt="The Secretary" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">Junior Secretary</h2>
-                        <h3 class="card-fullname">Ava Doherty</h3>
-                        <p class="card-college"><i>Brasenose College</i></p>
+                        <h3 class="card-fullname">Robert Turner</h3>
+                        <p class="card-college"><i>The Queen's College</i></p>
                         <p class="card-text">Responsible for minuting meetings, the weekly email, and the maintenance of the membership lists.</p>
                     </div>
                 </div>
@@ -154,7 +154,6 @@
             <p class="text-center mb-5">The Committee is supported by a wide-range of different position holders, some of whom are elected, and others appointed. </p>
 
             <div class="row justify-content-center">
-
 
             <!-- The Webmaster Card -->
             <div class="col-md-4 mb-4">
@@ -173,25 +172,12 @@
             <!-- The Social Secretary Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Social Secretary" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/social_sec.jpeg" class="card-img-top" alt="The Social Secretary" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Social Secretary</h2>
-                        <h3 class="card-fullname">Jessica Rodrigues</h3>
-                        <p class="card-college"><i>Pembroke College</i></p>
+                        <h3 class="card-fullname">Antonio Reis</h3>
+                        <p class="card-college"><i>St Hugh's College</i></p>
                         <p class="card-text">The Social Secretary is responsible for organising social events, in particular collaborations with other societies.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- The Director of Communications Card -->
-            <div class="col-md-4 mb-4">
-                <div class="card h-100">
-                    <img src="images/committee/doc.png" class="card-img-top" alt="The Director of Communications" style="object-fit: cover; height: 300px;">
-                    <div class="card-body">
-                        <h2 class="card-title">The Director of Communications</h2>
-                        <h3 class="card-fullname">Thomas Dorey</h3>
-                        <p class="card-college"><i>Oxford Brookes University</i></p>
-                        <p class="card-text">The Director of Communications is responsible for the Association's social media. </p>
                     </div>
                 </div>
             </div>
@@ -199,20 +185,72 @@
             <!-- The Publications Officer Card <-->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/publications.jpeg" class="card-img-top" alt="The Publications Editor AKA The Blogmaster" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/pub_editor.jpeg" class="card-img-top" alt="The Publications Editor - also known as The Blogmaster" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Publications Editor</h2>
-                        <h3 class="card-fullname">Robert Turner</h3>
-                        <p class="card-college"><i>The Queen's College</i></p>
+                        <h3 class="card-fullname">Jason Manning</h3>
+                        <p class="card-college"><i>Lincoln College</i></p>
                         <p class="card-text">The Publications Editor is responsible for the Association's 'Freedom of the Press' blog (<a href="https://blog.oxuniliberals.com">blog.oxuniliberals.com</a>). You are able to submit an article for consideration by the Editor via the form linked below.</p>
                         <a href="https://oxuniliberals.com/submit-article" class="btn-email">Go to: Article Submission Form</a>
                     </div>
                 </div>
             </div>
+
+            <!-- The Political Officer Card -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="images/logo.svg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
+                    <div class="card-body">
+                        <h2 class="card-title">The Political Officer</h2>
+                        <h3 class="card-fullname">Isabelle Rothwell</h3>
+                        <p class="card-college"><i>Somerville College</i></p>
+                        <p class="card-text">The Political Officer is responsible for the Association's political activities and campaigns.</p>
+                        <a href="mailto:politicalofficer@oxuniliberals.com" class="btn-email">Email: The Political Officer</a>
+                    </div>
+                </div>
+            </div>
            
+            <!-- The Director of Communications Card -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="images/committee/doc.jpeg" class="card-img-top" alt="The Director of Communications" style="object-fit: cover; height: 300px;">
+                    <div class="card-body">
+                        <h2 class="card-title">The Director of Communications</h2>
+                        <h3 class="card-fullname">Joe Sizer</h3>
+                        <p class="card-college"><i>Oxford Brookes University</i></p>
+                        <p class="card-text">The Director of Communications is responsible for the Association's social media. </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- The Communications Officer Card -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="images/logo.svg" class="card-img-top" alt="The Communications Officer" style="object-fit: cover; height: 300px;">
+                    <div class="card-body">
+                        <h2 class="card-title">The Communications Officer</h2>
+                        <h3 class="card-fullname">Anish Kumar</h3>
+                        <p class="card-college"><i>TBD</i></p>
+                        <p class="card-text">The Communications Officer is responsible for assisting the Director of Communications with social media.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- The Memberships Officer Card -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="images/logo.svg" class="card-img-top" alt="The Memberships Officer" style="object-fit: cover; height: 300px;">
+                    <div class="card-body">
+                        <h2 class="card-title">The Memberships Officer</h2>
+                        <h3 class="card-fullname">Jasper Browell</h3>
+                        <p class="card-college"><i>Oxford Brookes University</i></p>
+                        <p class="card-text">The Memberships Officer is responsible for assisting with membership engagement, recruitment and experience. </p>
+                    </div>
+                </div>
+            </div>
 
             <!-- The Access and Welfare Officer Card -->
-            <div class="col-md-4 mb-4">
+            <!-- <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <img src="images/logo.svg" class="card-img-top" alt="The Access and Welfare Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
@@ -223,23 +261,10 @@
                         <a href="mailto:accessandwelfare@oxuniliberals.com" class="btn-email">Email: The Access and Welfare Officer</a>
                     </div>
                 </div>
-            </div>
-
-            <!-- Political Officer Card <-->
-            <div class="col-md-4 mb-4">
-                <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
-                    <div class="card-body">
-                        <h2 class="card-title">The Political Officer</h2>
-                        <h3 class="card-fullname">VACANT</h3>
-                        <p class="card-college"><i>All Souls College</i></p>
-                        <p class="card-text">The Political Officer is in charge of the 'real world' politics side of the Association - organising campaigning sessions and hosting the termly Policy Meeting.</p>
-                    </div>
-                </div>
-            </div>
+            </div> -->
 
              <!-- The Presidential Private Secretary Card <-->
-             <div class="col-md-4 mb-4">
+             <!-- <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <img src="images/logo.svg" class="card-img-top" alt="The Presidential Private Secretary" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
@@ -249,7 +274,7 @@
                         <p class="card-text">The PPS is responsible for the Association's alumni relations, and assists the Junior President with certain administrative tasks.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </section>
     
@@ -262,12 +287,12 @@
         <div class="row justify-content-center">
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/ro.jpg" class="card-img-top" alt="The Returning Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/ro.jpeg" class="card-img-top" alt="The Returning Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Returning Officer</h2>
-                        <h3 class="card-fullname">Harriet Dolby</h3>
-                        <p class="card-college"><i>Lady Margaret Hall</i></p>
-                        <p class="card-text">The Returning Officer is in charge of interpreting the Association’s Rules, running the termly election and organising disciplinary processes. They lead the team of Electoral Officials.</p>
+                        <h3 class="card-fullname">Thomas Crossley</h3>
+                        <p class="card-college"><i>Christ Church</i></p>
+                        <p class="card-text">The Returning Officer is in charge of interpreting the Association's Rules, running the termly election and organising disciplinary processes. They lead the team of Electoral Officials.</p>
                         <p class="card-text">Please contact the Returning Officer for all information and queries relating to elections.</p>
                         <a href="mailto:returningofficer@oxuniliberals.com" class="btn-email">Email: The Returning Officer</a>
                     </div>
@@ -275,11 +300,11 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/committee/ro-emeritus.jpeg" class="card-img-top" alt="The Returning Officer Emeritus" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/ro-emeritus.jpg" class="card-img-top" alt="The Returning Officer Emeritus" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Returning Officer Emeritus</h2>
-                        <h3 class="card-fullname">Julian Wang</h3>
-                        <p class="card-college"><i>University College</i></p>
+                        <h3 class="card-fullname">Harriet Dolby</h3>
+                        <p class="card-college"><i>Lady Margaret Hall</i></p>
                         <p class="card-text">The Returning Officer Emeritus is ordinarily the most recent Ex-Returning Officer. They assist the Returning Officer and sometimes serve as Acting Returning Officer.</p>
                     </div>
                 </div>
