--- a/committee.html
+++ b/committee.html
@@ -230,7 +230,7 @@
                     <div class="card-body">
                         <h2 class="card-title">The Communications Officer</h2>
                         <h3 class="card-fullname">Anish Kumar</h3>
-                        <p class="card-college"><i>TBD</i></p>
+                        <p class="card-college"><i>Christ Church</i></p>
                         <p class="card-text">The Communications Officer is responsible for assisting the Director of Communications with social media.</p>
                     </div>
                 </div>
