Temporarily comment out role of memberships officer

--- a/committee.html
+++ b/committee.html
@@ -244,7 +244,7 @@
                         <h2 class="card-title">The Memberships Officer</h2>
                         <h3 class="card-fullname">Jasper Browell</h3>
                         <p class="card-college"><i>Oxford Brookes University</i></p>
-                        <p class="card-text">The Memberships Officer is responsible for assisting with membership engagement, recruitment and experience. </p>
+                        <!-- <p class="card-text">The Memberships Officer is responsible for assisting with membership engagement, recruitment and experience. </p> -->
                     </div>
                 </div>
             </div>
