Fix error where reference to image forgotten in profile card for memberships officer

--- a/committee.html
+++ b/committee.html
@@ -239,7 +239,7 @@
             <!-- The Memberships Officer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Memberships Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/memberships.jpg" class="card-img-top" alt="The Memberships Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Memberships Officer</h2>
                         <h3 class="card-fullname">Jasper Browell</h3>
