--- a/committee.html
+++ b/committee.html
@@ -375,7 +375,7 @@
                                     <div class="card-body">
                                         <h2 class="card-title">The Senior Treasurer</h2>
                                         <h3 class="card-fullname">Will Lawson</h3>
-                                        <p class="card-college"><i>University College</i></p>
+                                        <p class="card-college"><i>Mansfield College</i></p>
                                         <p class="card-text">The Senior Treasurer is responsible for supervision of the Association's finances.</p>
                                     </div>
                                 </div>
