Add comms officer HT26 image

--- a/committee.html
+++ b/committee.html
@@ -225,7 +225,7 @@
             <!-- The Communications Officer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Communications Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/comms_officer.jpg" class="card-img-top" alt="The Communications Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Communications Officer</h2>
                         <h3 class="card-fullname">Anish Kumar</h3>
