--- a/committee.html
+++ b/committee.html
@@ -199,7 +199,7 @@
             <!-- The Political Officer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/political_officer.jpg" class="card-img-top" alt="The Political Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Political Officer</h2>
                         <h3 class="card-fullname">Isabelle Rothwell</h3>
