Update to webmaster OSLA email in committee card button

--- a/committee.html
+++ b/committee.html
@@ -164,7 +164,7 @@
                         <h3 class="card-fullname">Hayden Williams</h3>
                         <p class="card-college"><i>Oxford Brookes University</i></p>
                         <p class="card-text">The Webmaster is responsible for all digital infrastructure associated with the Association including this website, document portal, blog and email services. All Association-related technical queries should be directed through the Webmaster.<p>
-                        <a href="mailto:hayden@haydenwilliams.dev" class="btn-email">Email: The Webmaster</a>
+                        <a href="mailto:webmaster@oxuniliberals.com" class="btn-email">Email: The Webmaster</a>
                     </div>
                 </div>
             </div>
