--- a/committee.html
+++ b/committee.html
@@ -248,6 +248,19 @@
                 </div>
             </div>
 
+             <!-- The Press Officer Card -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="images/committee/press_officer.jpeg" class="card-img-top" alt="The Press Officer" style="object-fit: cover; height: 300px;">
+                    <div class="card-body">
+                        <h2 class="card-title">The Press Officer</h2>
+                        <h3 class="card-fullname">Ava Doherty</h3>
+                        <p class="card-college"><i>Brasenose College</i></p>
+                        <!-- <p class="card-text">The Memberships Officer is responsible for assisting with membership engagement, recruitment and experience. </p> -->
+                    </div>
+                </div>
+            </div>
+
             <!-- The Access and Welfare Officer Card -->
             <!-- <div class="col-md-4 mb-4">
                 <div class="card h-100">
